--- a/elemente/index.html
+++ b/elemente/index.html
@@ -20,12 +20,12 @@
     ><a href="#">Ich bin auch ein Inline Element</a>
 
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+      Lorem ipsum <span>dolor</span> sit amet, <b>consectetur</b> adipisicing <strong>elit</strong>, sed do
       eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-      enim ad minim veniam, quis nostrud exercitation ullamco laboris
-      nisi ut a liquip ex ea commodo consequat. Duis aute irure dolor
+      enim ad <i>minim</i> veniam, quis <em>nostrud</em> exercitation ullamco laboris
+      nisi ut a liquip ex ea commodo consequat. <br></br>Duis aute irure dolor
       in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-      nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+      nulla pariatur. Excepteur sint occaecat cupidatat non <s>proident</s>,
       sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
   </body>
